--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,10 @@ body {
 	padding-left: 20px;
 }
 
+html, body {
+	height: 100%;
+}
+
 .crudButtons, .crudButtons div {
 	padding: 0px;
 }
@@ -18,6 +22,30 @@ body {
 
 .secondary-title {
 	margin-top: 0px;
+}
+
+.wrapper {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -6em;
+	padding-bottom: 20px;
+}
+
+.footer, .push {
+	height: 6em;
+}
+
+.footer {
+	width: 97%;
+	padding: 5px 0px 0px 0px;
+	position: relative;
+
+	background-color: #f8f8f8;
+	border: 1px solid transparent;
+	border-color: #e7e7e7;
+	border-radius: 4px;
+	box-sizing: border-box;
 }
 
 /* Viewing Courses */
