--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,7 @@ label #replyField {
 	float: left !important;
 }
 
-input[type=date], input[type=text], input[type=email], input[type=password], input[type=number], input[role=textbox], select {
+input[type=date], input[type=text], input[type=email], input[type=password], input[type=number], input[role=textbox], select, input[type=textarea] {
 	width: 25%;
 }
 
